# py-json-transformer

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: python.yaml
dictionary_transformer/: __init__.py  exceptions.py  transformer.py
json_transformer/: __init__.py  transformer.py
tests/: tests.py
