[metadata]
name = json-transformer
description = JSON Transformer
version = 0.0.1
license = MIT
license_files = LICENSE.txt
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Rimvydas Zilinskas
author_email = rimvydas.zilinskas@yahoo.com
url = https://github.com/rimvydaszilinskas/py-json-transformer

[options]
install_requires =
