[metadata]
name = dictionary-transformer
description = Dictionary Transformer
version = 0.0.2
license = MIT
license_files = LICENSE.txt
description_file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = Rimvydas Zilinskas
author_email = rimvydas.zilinskas@yahoo.com
url = https://github.com/rimvydaszilinskas/py-json-transformer

[options]
install_requires =
